fix atom overlay z-index

--- a/app/assets/stylesheets/folio/console/modules/_simple-form-with-atoms.sass
+++ b/app/assets/stylesheets/folio/console/modules/_simple-form-with-atoms.sass
@@ -156,6 +156,9 @@
     padding: 0 $grid-gutter-width (( $grid-gutter-width + 95px ))
     flex: 1 1 auto
 
+  &--editing-atom
+    z-index: 5
+
   &--editing-atom &__overlay-dismiss
     display: block
 
